modifications in logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="wrapper1" class="container-fluid">
     <nav class="navigation">
       <div class="left">
-        <div class="logo">OpenSourceJam</div>
+        <div class="logo"><a href="#">OpenSourceJam</a></div>
         <div class="sublogo">VISUALS</div>
       </div>
 
