--- a/index.html
+++ b/index.html
@@ -2,9 +2,49 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Résumé</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style//style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="./main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <title>OpenSourceJam</title>
   </head>
   <body>
-    ― Hello World! &#x1F609;
-  </body>
+    <!-- ― Hello World! &#x1F609; -->
+
+    <!-- START NAVBAR -->
+  <div id="wrapper1" class="container-fluid">
+    <nav class="navigation">
+      <div class="left">
+        <div class="logo"><a href="#">OpenSourceJam</a></div>
+        <div class="sublogo">VISUALS</div>
+      </div>
+
+      <div class="right">
+        <ul>
+          <li><a href="#aboutme">ABOUT ME</a></li>
+          <li><a href="#linetime">LINE TIME</a></li>
+          <li><a href="#footer">CONTACT</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- END NAVBAR -->
+
+    <!-- START HEADER -->
+
+    <div id="header" class="container-fluid">
+      <div id="welcome">
+        <h1 class="welcome">WELCOME</h1>
+        <h4 style="padding-bottom: 50px">Let's create amazing things together.</h4>
+        <a href="#aboutme" class="btn btn-circle">
+          <i class="fa fa-angle-double-down"></i>
+          
+        </a>
+      </div>
+    </div>
+  </div>
+  <!-- END WRAPPER -->
+  </body> 
 </html>
