Create an intro issue#3

--- a/index.html
+++ b/index.html
@@ -1,50 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style//style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="./main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <title>OpenSourceJam</title>
-  </head>
-  <body>
-    <!-- ― Hello World! &#x1F609; -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style//style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="./main.js"></script>
 
-    <!-- START NAVBAR -->
-  <div id="wrapper1" class="container-fluid">
-    <nav class="navigation">
-      <div class="left">
-        <div class="logo"><a href="#">OpenSourceJam</a></div>
-        <div class="sublogo">VISUALS</div>
-      </div>
+  <title>OpenSourceJam</title>
+</head>
 
-      <div class="right">
-        <ul>
-          <li><a href="#aboutme">ABOUT ME</a></li>
-          <li><a href="#linetime">LINE TIME</a></li>
-          <li><a href="#footer">CONTACT</a></li>
-        </ul>
-      </div>
-    </nav>
+<body>
+  <!-- ― Hello World! &#x1F609; -->
 
-    <!-- END NAVBAR -->
-
-    <!-- START HEADER -->
-
+  <!-- START HEADER -->
     <div id="header" class="container-fluid">
       <div id="welcome">
         <h1 class="welcome">WELCOME</h1>
         <h4 style="padding-bottom: 50px">Let's create amazing things together.</h4>
         <a href="#aboutme" class="btn btn-circle">
           <i class="fa fa-angle-double-down"></i>
-          
         </a>
       </div>
     </div>
-  </div>
-  <!-- END WRAPPER -->
-  </body> 
+    </div>
+  <!-- END HEADER -->
+
+    <!-- START MAIN -->
+
+    <!-- END MAIN -->
+
+  <!-- START FOOTER  -->
+
+  <!-- END FOOTER -->
+</body>
+
 </html>
