Navigation bar added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Résumé</title>
-  </head>
-  <body>
-    ― Hello World! &#x1F609;
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style//style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script defer src="main.js"></script>
+
+  <title>OpenSourceJam</title>
+</head>
+
+<body>
+  <!-- ― Hello World! &#x1F609; -->
+
+  <!-- START HEADER -->
+  <header class="navbar">
+    <nav class="nav">
+      <div>
+      <a href="#" class="logo">OpenSourceJam</a>
+      <p class="sublogo">VISUALS</p>
+      </div>
+      <button class="nav-toggle" aria-label="Abrir menú">
+        <i class="fas fa-bars"></i>
+      </button>
+      <ul class="nav-menu">
+
+        <li class="nav-menu-item">
+          <a href="#aboutme" class="nav-menu-link nav-link">ABOUT ME</a>
+        </li>
+        <li class="nav-menu-item">
+          <a href="#linetime" class="nav-menu-link nav-link">L]NE T]ME</a>
+        </li>
+        <li class="nav-menu-item">
+          <a href="#footer" class="nav-menu-link nav-link">CONTACT</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <!-- END HEADER -->
+
+  <!-- START MAIN -->
+
+  <!-- END MAIN -->
+
+  <!-- START FOOTER  -->
+
+  <!-- END FOOTER -->
+</body>
+
 </html>
