--- a/index.html
+++ b/index.html
@@ -1,51 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style//style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="./main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <title>OpenSourceJam</title>
-  </head>
-  <body>
-    <!-- ― Hello World! &#x1F609; -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style//style.css">
+  <title>OpenSourceJam</title>
+</head>
 
-    <!-- START NAVBAR -->
-  <div id="wrapper1" class="container-fluid">
-    <nav class="navigation">
-      <div class="left">
-        <div class="logo"><a href="#">OpenSourceJam</a></div>
-        <div class="sublogo">VISUALS</div>
-      </div>
+<body>
+  <!-- ― Hello World! &#x1F609; -->
 
-      <div class="right">
-        <ul>
-          <li><a href="#aboutme">ABOUT ME</a></li>
-          <li><a href="#linetime">LINE TIME</a></li>
-          <li><a href="#footer">CONTACT</a></li>
-        </ul>
-      </div>
-    </nav>
+  <!-- START NAVBAR -->
 
-    <!-- END NAVBAR -->
+  <!-- END NAVBAR -->
 
-    <!-- START HEADER -->
+  <!-- START HEADER -->
 
-    <div id="header" class="container-fluid">
-      <div id="welcome">
-        <h1 class="welcome">WELCOME</h1>
-        <h4 style="padding-bottom: 50px">Let's create amazing things together.</h4>
-        <a href="#aboutme" class="btn btn-circle">
-          <i class="fa fa-angle-double-down"></i>
-          
-        </a>
-      </div>
-    </div>
-  </div>
-  <!-- END WRAPPER -->
+  <!-- END HEADER -->
 
   <!-- START ABOUT ME -->
 
@@ -55,18 +27,23 @@
     </div>
     <div class="about_box">
       <div class="about_text">
-        <p>Hi! I'm a passionate adventurer and seeker of mysteries. With a sharp and analytical mind, I became a private detective, using my skills to help people unravel intriguing cases and uncover the truth.</p>
+        <p>Hello, I'm T'zar, an alien from Xerion, a planet in the Andromeda constellation. I'm a stellar programmer,
+          and my passion lies in technology and programming.</p>
 
-        <p>My story is filled with thrilling experiences. I've traveled the world, from the dark streets of London to the exotic jungles of South America, always in pursuit of the next great adventure. I've faced dangers, solved enigmatic puzzles, and unmasked cunning villains.</p>
-        
-        <p>If you're in need of answers to an intriguing mystery or require assistance in solving a complex case, don't hesitate to reach out to me. I'm ready to embark on a new adventure and face any challenge that comes my way.</p>
+        <p>In Xerion, we have achieved advanced levels in cosmic software development. My work focuses on optimizing
+          spaceship systems and communication. I also enjoy composing music and designing interactive holographs.</p>
+
+        <p>I'm thrilled to continue exploring and advancing science and technology on my planet and beyond.
+          Occasionally, I take a stroll through other worlds in search of junior talent.</p>
       </div>
       <div class="about_img">
         <img src="https://cdn.pixabay.com/photo/2020/12/25/00/41/alien-5858426_1280.png" class="img-round"></img>
       </div>
-    </div>   
+    </div>
   </div>
 
-  <!-- END ABOUT ME --> 
-  </body> 
+  <!-- END ABOUT ME -->
+
+</body>
+
 </html>
