issue #23 Extra: dark or light mode selection

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Résumé</title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/style.css">
+  <title>Document</title>
+</head>
+<body>
     ― Hello World! &#x1F609;
-  </body>
+    
+    <button id="theme-toggle">Toggle Mode</button>
+
+<script src="/main.js"></script>
+</body>
 </html>
