--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- ― Hello World! &#x1F609; -->
 
   <!-- START HEADER -->
-    <div id="header" class="container-fluid">
+    <div id="wrapper1" class="container-fluid">
       <div id="welcome">
         <h1 class="welcome">WELCOME</h1>
         <h4 style="padding-bottom: 50px">Let's create amazing things together.</h4>
